# snake_game_raylib

./: CMakeLists.txt  README.md  colors.cpp  food.cpp  food.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  main.cpp  snake.cpp  snake.hpp
src/: colors.hpp  food.hpp
